# utymap

./: LICENSE  README.md
core/shared/: Application.hpp  CMakeLists.txt  Callbacks.hpp  Common.hpp  Configuration.hpp  ExportElementVisitor.hpp  ExportLib.cpp  Search.hpp  Storage.hpp
core/src/: CMakeLists.txt  CancellationToken.hpp  LodRange.hpp
core/src/builders/: BuilderContext.hpp  CacheBuilder.hpp  ElementBuilder.hpp  EmptyBuilder.hpp  ExternalBuilder.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshCache.cpp  MeshCache.hpp  MeshPool.hpp  QuadKeyBuilder.cpp  QuadKeyBuilder.hpp
core/src/entities/: Element.hpp
core/src/heightmap/: GridElevationProvider.hpp  SrtmElevationProvider.hpp
core/src/index/: BitmapIndex.cpp  BitmapIndex.hpp  BitmapStream.cpp  BitmapStream.hpp  ElementGeometryClipper.cpp  ElementGeometryClipper.hpp  ElementGeometryVisitor.hpp  ElementStore.cpp  ElementStore.hpp  ElementStream.cpp  ElementStream.hpp  ElementVisitorFilter.hpp  GeoStore.cpp  GeoStore.hpp  InMemoryElementStore.cpp  InMemoryElementStore.hpp  MeshStream.cpp  MeshStream.hpp  PersistentElementStore.cpp  PersistentElementStore.hpp  StringIndex.cpp  StringIndex.hpp  StringTable.cpp  StringTable.hpp
core/src/lsys/: Rules.hpp
core/src/mapcss/: MapCssParser.cpp  Style.hpp  StyleConsts.cpp  StyleConsts.hpp  StyleDeclaration.hpp  StyleEvaluator.cpp  StyleEvaluator.hpp  StyleProvider.cpp  StyleProvider.hpp  TextureAtlasParser.cpp
core/src/math/: Mesh.hpp  (+1 more)
core/test/: CMakeLists.txt  ExportLibTest.cpp  config.hpp  main.cpp
docs/: build.md  terrain.md
unity/demo/: .gitignore
(+338 files in other folders)
